@@ -1,4 +1,3 @@
-Document Analysis Lexicon Item | DocumentAnalysisLexiconItem
 Document Analysis Lexicon | DocumentAnalysisLexicon
 Feature | Document
 Feature | DublinCore
