@@ -1,2 +1,1 @@
 DocumentAnalysisLexicon
-DocumentAnalysisLexiconItem
