@@ -1,4 +1,7 @@
 2005-01-24 yo
+* Remove the PropertySheet DocumentAnalysisLexiconItem.
+
+2005-01-24 yo
 * Perform refactoring of the Use Case Module.
 
 2005-11-03 Kevin
